Ignore some goals for tests projects

--- a/kc-cloudtrust-module/pom.xml
+++ b/kc-cloudtrust-module/pom.xml
@@ -197,6 +197,7 @@
                     <version>${owasp-check.version}</version>
                     <configuration>
                         <format>XML</format>
+                        <failOnError>false</failOnError>
                     </configuration>
                 </plugin>
             </plugins>
