--- a/kc-cloudtrust-testsuite/pom.xml
+++ b/kc-cloudtrust-testsuite/pom.xml
@@ -27,12 +27,9 @@
         <keycloak.version>${project.version}</keycloak.version>
         <jfreechart.version>1.5.0</jfreechart.version>
         <cloudtrust-common.version>1.0.0</cloudtrust-common.version>
+        <spotbugs.version>3.1.12.1</spotbugs.version>
+        <owasp-check.version>5.2.1</owasp-check.version>
     </properties>
-
-    <!--dependencyManagement>
-        <dependencies>
-        </dependencies>
-    </dependencyManagement-->
 
     <dependencies>
         <dependency>
@@ -345,7 +342,15 @@
                 <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
-                    <version>${version.frontend.maven.plugin}</version>
+                    <version>${frontend.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-maven-plugin</artifactId>
+                    <version>${spotbugs.version}</version>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -382,6 +387,21 @@
                             </property>
                         </properties>
                         <argLine>${argLine}</argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.owasp</groupId>
+                    <artifactId>dependency-check-maven</artifactId>
+                    <version>${owasp-check.version}</version>
+                    <configuration>
+                        <format>XML</format>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <skipIfEmpty>true</skipIfEmpty>
                     </configuration>
                 </plugin>
             </plugins>
