[CLOUDTRUST-2181] Add common tools for Keycloak components

--- a/kc-cloudtrust-module/pom.xml
+++ b/kc-cloudtrust-module/pom.xml
@@ -15,8 +15,12 @@
     <description>Parent for keycloak modules</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>kc-cloudtrust-common</module>
+    </modules>
+
     <properties>
-        <cloudtrust-common.version>1.2.0</cloudtrust-common.version>
+        <cloudtrust.version>1.3.0</cloudtrust.version>
         <keycloak.version>8.0.1</keycloak.version>
         <flatbuffers.version>1.10.0</flatbuffers.version>
         <apache-collections.version>4.2</apache-collections.version>
@@ -37,7 +41,12 @@
             <dependency>
                 <groupId>io.cloudtrust</groupId>
                 <artifactId>cloudtrust-common</artifactId>
-                <version>${cloudtrust-common.version}</version>
+                <version>${cloudtrust.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.cloudtrust</groupId>
+                <artifactId>kc-cloudtrust-common</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.keycloak</groupId>
