--- a/kc-cloudtrust-testsuite/pom.xml
+++ b/kc-cloudtrust-testsuite/pom.xml
@@ -15,6 +15,10 @@
     <description>Parent for testing of keycloak modules</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>kc-cloudtrust-test-tools</module>
+    </modules>
+
     <properties>
         <auth.server.http.port>8180</auth.server.http.port>
         <auth.server.https.port>8543</auth.server.https.port>
@@ -27,7 +31,7 @@
 
         <keycloak.version>8.0.1</keycloak.version>
         <jfreechart.version>1.5.0</jfreechart.version>
-        <cloudtrust-common.version>1.2.0</cloudtrust-common.version>
+        <cloudtrust.version>1.3.0</cloudtrust.version>
         <spotbugs.version>3.1.12.1</spotbugs.version>
         <owasp-check.version>5.2.1</owasp-check.version>
     </properties>
@@ -36,7 +40,7 @@
         <dependency>
             <groupId>io.cloudtrust</groupId>
             <artifactId>cloudtrust-common</artifactId>
-            <version>${cloudtrust-common.version}</version>
+            <version>${cloudtrust.version}</version>
         </dependency>
         <!-- All following dependencies are to run a local keycloak in arquillian for tests
             Many of these dependencies can be omitted (for example email server or database connectors),
@@ -48,7 +52,6 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-test-helper</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
         <!--arquillian-->
         <dependency>
@@ -61,13 +64,11 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -75,18 +76,15 @@
             <artifactId>graphene-webdriver</artifactId>
             <version>${arquillian-graphene.version}</version>
             <type>pom</type>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.protocol</groupId>
             <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-phantom-driver</artifactId>
             <version>1.2.1.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.graphene</groupId>
@@ -102,21 +100,18 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>${appium.client.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>${jfreechart.version}</version>
-            <scope>test</scope>
         </dependency>
         <!--dependency>
             <groupId>jfree</groupId>
@@ -130,30 +125,25 @@
             <groupId>org.keycloak.testsuite</groupId>
             <artifactId>integration-arquillian-test-apps-servlets</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.keycloak.testsuite</groupId>
             <artifactId>integration-arquillian-util</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -161,14 +151,12 @@
             <artifactId>ant</artifactId>
             <version>1.10.5</version>
             <type>jar</type>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.sshd</groupId>
             <artifactId>sshd-core</artifactId>
             <version>2.1.0</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- Email Test Server -->
@@ -191,7 +179,6 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>test</scope>
         </dependency>
 
         <!-- Keycloak deps for tests -->
@@ -206,26 +193,22 @@
                     <artifactId>guava</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-admin-client</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-client-registration-api</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-authz-client</artifactId>
             <version>${keycloak.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!--UNDERTOW-->
