Fixes according to PR review.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,17 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <cloudtrust.version>${project.version}</cloudtrust.version>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <junit.version>4.12</junit.version>
+        <version.pmd.plugin>3.13.0</version.pmd.plugin>
+        <jacoco.version>0.8.5</jacoco.version>
+        <spotbugs.version>4.0.0</spotbugs.version>
+        <fb-contrib.version>7.4.7</fb-contrib.version>
+        <findsecbugs.version>1.10.1</findsecbugs.version>
+        <owasp-check.version>5.3.1</owasp-check.version>
     </properties>
 
     <dependencyManagement>
