--- a/kc-cloudtrust-module/kc-cloudtrust-common/pom.xml
+++ b/kc-cloudtrust-module/kc-cloudtrust-common/pom.xml
@@ -5,16 +5,12 @@
     <parent>
         <groupId>io.cloudtrust</groupId>
         <artifactId>kc-cloudtrust-module</artifactId>
-        <version>8.0.1</version>
+        <version>11.0.2</version>
     </parent>
 
     <artifactId>kc-cloudtrust-common</artifactId>
     <description>Common tools for Keycloak/Cloudtrust components</description>
     <packaging>jar</packaging>
-
-    <properties>
-        <cloudtrust.version>1.4.0</cloudtrust.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -40,6 +36,11 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
