[CLOUDTRUST-2792] Upgrade to Keycloak 14.0.0

--- a/kc-cloudtrust-module/kc-cloudtrust-common/pom.xml
+++ b/kc-cloudtrust-module/kc-cloudtrust-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.cloudtrust</groupId>
         <artifactId>kc-cloudtrust-module</artifactId>
-        <version>8.0.1</version>
+        <version>14.0.0</version>
     </parent>
 
     <artifactId>kc-cloudtrust-common</artifactId>
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <cloudtrust.version>1.4.0</cloudtrust.version>
+        <cloudtrust.version>2.0.0</cloudtrust.version>
     </properties>
 
     <dependencies>
@@ -38,8 +38,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
