--- a/kc-cloudtrust-module/pom.xml
+++ b/kc-cloudtrust-module/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.keycloak</groupId>
         <artifactId>keycloak-parent</artifactId>
-        <version>8.0.1</version>
+        <version>14.0.0</version>
         <relativePath/>
     </parent>
 
     <groupId>io.cloudtrust</groupId>
     <artifactId>kc-cloudtrust-module</artifactId>
-    <version>8.0.1</version>
+    <version>14.0.0</version>
     <description>Parent for keycloak modules</description>
     <packaging>pom</packaging>
 
@@ -20,19 +20,22 @@
     </modules>
 
     <properties>
-        <cloudtrust.version>1.4.0</cloudtrust.version>
-        <keycloak.version>8.0.1</keycloak.version>
+        <cloudtrust.version>2.0.0</cloudtrust.version>
+        <keycloak.version>14.0.0</keycloak.version>
         <flatbuffers.version>1.10.0</flatbuffers.version>
-        <apache-collections.version>4.2</apache-collections.version>
+        <apache-collections.version>4.4</apache-collections.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <version.pmd.plugin>3.13.0</version.pmd.plugin>
-        <jacoco.version>0.8.5</jacoco.version>
-        <spotbugs.version>4.0.0</spotbugs.version>
+        <version.jboss.maven.plugin>7.9.Final</version.jboss.maven.plugin>
+        <version.wildfly.maven.plugin>2.0.2.Final</version.wildfly.maven.plugin>
+        <version.frontend.maven.plugin>1.12.0</version.frontend.maven.plugin>
+        <jacoco.version>0.8.6</jacoco.version>
+        <spotbugs.version>4.2.3</spotbugs.version>
         <fb-contrib.version>7.4.7</fb-contrib.version>
-        <findsecbugs.version>1.10.1</findsecbugs.version>
-        <owasp-check.version>5.3.1</owasp-check.version>
+        <findsecbugs.version>1.11.0</findsecbugs.version>
+        <owasp-check.version>6.0.3</owasp-check.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -124,6 +127,10 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-common</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 
