[CLOUDTRUST-4073] Migrate to Keycloak 18.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.cloudtrust</groupId>
     <artifactId>cloudtrust-parent</artifactId>
-    <version>2.1.0</version>
+    <version>3.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -21,7 +21,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <junit.version>4.13.2</junit.version>
+        <junit.version>5.8.2</junit.version>
+        <junit.platform.version>1.8.1</junit.platform.version>
         <version.pmd.plugin>3.13.0</version.pmd.plugin>
         <jacoco.version>0.8.7</jacoco.version>
         <spotbugs.version>4.2.3</spotbugs.version>
