--- a/kc-cloudtrust-module/pom.xml
+++ b/kc-cloudtrust-module/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.keycloak</groupId>
         <artifactId>keycloak-parent</artifactId>
-        <version>14.0.0</version>
+        <version>18.0.0</version>
         <relativePath/>
     </parent>
 
     <groupId>io.cloudtrust</groupId>
     <artifactId>kc-cloudtrust-module</artifactId>
-    <version>14.0.0</version>
+    <version>18.0.0</version>
     <description>Parent for keycloak modules</description>
     <packaging>pom</packaging>
 
@@ -20,8 +20,8 @@
     </modules>
 
     <properties>
-        <cloudtrust.version>2.1.0</cloudtrust.version>
-        <keycloak.version>14.0.0</keycloak.version>
+        <cloudtrust.version>3.0.0</cloudtrust.version>
+        <keycloak.version>18.0.0</keycloak.version>
         <flatbuffers.version>1.10.0</flatbuffers.version>
         <apache-collections.version>4.4</apache-collections.version>
 
@@ -138,31 +138,9 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.wildfly.plugins</groupId>
-                    <artifactId>wildfly-maven-plugin</artifactId>
-                    <version>${version.wildfly.maven.plugin}</version>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.jboss.as.plugins</groupId>
-                    <artifactId>jboss-as-maven-plugin</artifactId>
-                    <version>${version.jboss.maven.plugin}</version>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>com.github.eirslett</groupId>
-                    <artifactId>frontend-maven-plugin</artifactId>
-                    <version>${version.frontend.maven.plugin}</version>
-                </plugin>
-
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.10.0</version>
                     <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
@@ -188,6 +166,7 @@
                     </executions>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.1.1</version>
                     <executions>
@@ -202,20 +181,6 @@
                                     <descriptorRef>jar-with-dependencies</descriptorRef>
                                 </descriptorRefs>
                                 <appendAssemblyId>false</appendAssemblyId>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>default-package</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>single</goal>
-                            </goals>
-                            <configuration>
-                                <descriptors>
-                                    <descriptor>assembly.xml</descriptor>
-                                </descriptors>
-                                <appendAssemblyId>false</appendAssemblyId>
-                                <tarLongFileMode>posix</tarLongFileMode>
                             </configuration>
                         </execution>
                     </executions>
