--- a/kc-cloudtrust-testsuite/pom.xml
+++ b/kc-cloudtrust-testsuite/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.keycloak.testsuite</groupId>
         <artifactId>integration-arquillian-tests</artifactId>
-        <version>14.0.0</version>
+        <version>17.0.1</version>
         <relativePath/>
     </parent>
 
     <groupId>io.cloudtrust</groupId>
     <artifactId>kc-cloudtrust-testsuite</artifactId>
-    <version>14.0.0</version>
+    <version>17.0.1</version>
     <description>Parent for testing of keycloak modules</description>
     <packaging>pom</packaging>
 
@@ -31,12 +31,13 @@
         <version.wildfly.maven.plugin>2.0.2.Final</version.wildfly.maven.plugin>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <keycloak.version>14.0.0</keycloak.version>
+        <keycloak.version>17.0.1</keycloak.version>
         <jfreechart.version>1.5.1</jfreechart.version>
         <systemrules.version>1.19.0</systemrules.version>
-        <cloudtrust.version>2.1.0</cloudtrust.version>
+        <cloudtrust.version>3.0.0</cloudtrust.version>
         <spotbugs.version>4.2.3</spotbugs.version>
-        <owasp-check.version>6.0.3</owasp-check.version>
+        <owasp-check.version>6.5.3</owasp-check.version>
+        <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
     <dependencies>
@@ -240,6 +241,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
