[CLOUDTRUST-4073] Upgrade Jackson versions

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <jackson-core.version>2.13.2</jackson-core.version>
+        <jackson-databind.version>2.13.2.2</jackson-databind.version>
+        <systemlambda.version>1.2.1</systemlambda.version>
+
         <junit.version>5.8.2</junit.version>
-        <junit.platform.version>1.8.1</junit.platform.version>
+        <junit.platform.version>1.8.2</junit.platform.version>
+        <hamcrest.version>1.3</hamcrest.version>
         <version.pmd.plugin>3.13.0</version.pmd.plugin>
         <jacoco.version>0.8.7</jacoco.version>
         <spotbugs.version>4.2.3</spotbugs.version>
