--- a/kc-cloudtrust-module/pom.xml
+++ b/kc-cloudtrust-module/pom.xml
@@ -20,9 +20,9 @@
     </modules>
 
     <properties>
-        <cloudtrust.version>3.0.0</cloudtrust.version>
+        <cloudtrust.version>3.0.0-SNAPSHOT</cloudtrust.version>
         <keycloak.version>18.0.0</keycloak.version>
-        <kc-cloudtrust.version>18.0.0</kc-cloudtrust.version>
+        <kc-cloudtrust.version>18.0.0-SNAPSHOT</kc-cloudtrust.version>
         <flatbuffers.version>1.10.0</flatbuffers.version>
         <apache-collections.version>4.4</apache-collections.version>
         <libphonenumber.version>8.13.3</libphonenumber.version>
@@ -54,6 +54,29 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <repositories>
+        <repository>
+            <id>project-release</id>
+            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_release</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>project-snapshot</id>
+            <url>https://artifactory.svc.elca.ch/artifactory/prj_cloudtrust_snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -64,7 +87,7 @@
             <dependency>
                 <groupId>io.cloudtrust</groupId>
                 <artifactId>kc-cloudtrust-common</artifactId>
-                <version>${project.version}</version>
+                <version>${kc-cloudtrust.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.keycloak</groupId>
@@ -105,6 +128,18 @@
             <dependency>
                 <groupId>org.keycloak</groupId>
                 <artifactId>keycloak-saml-core-public</artifactId>
+                <version>${keycloak.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-model-jpa</artifactId>
+                <version>${keycloak.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-model-infinispan</artifactId>
                 <version>${keycloak.version}</version>
                 <scope>provided</scope>
             </dependency>
@@ -233,6 +268,11 @@
                         <format>XML</format>
                         <failOnError>false</failOnError>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>3.0.0-M7</version>
                 </plugin>
             </plugins>
         </pluginManagement>
