--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cloudtrust.version>3.0.0</cloudtrust.version>
+        <cloudtrust.version>3.0.0-SNAPSHOT</cloudtrust.version>
         <keycloak.version>18.0.0</keycloak.version>
-        <kc-cloudtrust.version>18.0.0</kc-cloudtrust.version>
+        <kc-cloudtrust.version>18.0.0-SNAPSHOT</kc-cloudtrust.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
