--- a/kc-cloudtrust-testsuite/pom.xml
+++ b/kc-cloudtrust-testsuite/pom.xml
@@ -4,17 +4,17 @@
 
     <parent>
         <groupId>io.cloudtrust</groupId>
-        <artifactId>cloudtrust-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <artifactId>kc-cloudtrust-module</artifactId>
+        <version>26.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>kc-cloudtrust-testsuite</artifactId>
-    <version>20.1.0-SNAPSHOT</version>
     <description>Parent for testing of keycloak modules</description>
     <packaging>pom</packaging>
 
     <modules>
         <module>kc-cloudtrust-test-tools</module>
+        <module>kc-cloudtrust-db-access</module>
     </modules>
 
     <properties>
@@ -29,20 +29,18 @@
 
         <arquillian-graphene.version>2.5.4</arquillian-graphene.version>
         <undertow.version>1.0.0.Final</undertow.version>
-        <resteasy.version>4.7.5.Final</resteasy.version>
-        <jackson.version>2.14.2</jackson.version>
+        <jackson.version>2.18.2</jackson.version>
         <jbosslogging.version>3.4.1.Final</jbosslogging.version>
-        <slf4j.version>2.0.6</slf4j.version>
-        <greenmail.version>1.6.14</greenmail.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <greenmail.version>2.1.2</greenmail.version>
         <systemlambda.version>1.2.1</systemlambda.version>
-        <selenium.version>4.8.3</selenium.version>
-        <htmlunit.version>4.8.1.1</htmlunit.version>
-        <spotbugs.version>4.8.1.0</spotbugs.version>
-        <owasp-check.version>8.4.2</owasp-check.version>
+        <selenium.version>4.25.0</selenium.version>
+        <spotbugs.version>4.8.6</spotbugs.version>
+        <owasp-check.version>11.1.1</owasp-check.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <junit.version>5.10.1</junit.version>
-        <junit.platform.version>1.9.2</junit.platform.version>
-        <mockito.version>5.7.0</mockito.version>
+        <junit.version>5.11.3</junit.version>
+        <junit.platform.version>1.11.3</junit.platform.version>
+        <mockito.version>5.14.2</mockito.version>
     </properties>
 
     <dependencies>
@@ -53,12 +51,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-reload4j</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
@@ -68,8 +60,14 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>htmlunit-driver</artifactId>
-            <version>${htmlunit.version}</version>
+            <artifactId>htmlunit3-driver</artifactId>
+            <version>${selenium.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Email Test Server -->
@@ -91,44 +89,43 @@
 
         <dependency>
             <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-admin-client</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
             <artifactId>keycloak-services</artifactId>
-            <version>${keycloak.version}</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-server-spi-private</artifactId>
-            <version>${keycloak.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-junit5</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
-            <version>${resteasy.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>${resteasy.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxb-provider</artifactId>
-            <version>${resteasy.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.15.3.Final</version>
+            <artifactId>resteasy-core</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>undertow-embedded</artifactId>
             <version>${undertow.version}</version>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5</artifactId>
         </dependency>
 
         <dependency>
@@ -143,13 +140,18 @@
         <dependencies>
             <dependency>
                 <groupId>io.cloudtrust</groupId>
-                <artifactId>kc-cloudtrust-test-tools</artifactId>
-                <version>20.1.0-SNAPSHOT</version>
+                <artifactId>cloudtrust-test-tools</artifactId>
+                <version>5.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>org.keycloak</groupId>
-                <artifactId>keycloak-server-spi</artifactId>
-                <version>${keycloak.version}</version>
+                <groupId>io.cloudtrust</groupId>
+                <artifactId>kc-cloudtrust-db-access</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.cloudtrust</groupId>
+                <artifactId>kc-cloudtrust-test-tools</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <!-- env variables for unit tests -->
             <dependency>
@@ -158,9 +160,11 @@
                 <version>${systemlambda.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
                 <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.junit.platform</groupId>
@@ -228,6 +232,9 @@
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.lang=ALL-UNNAMED
                         </argLine>
+                        <systemPropertyVariables>
+                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        </systemPropertyVariables>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -241,7 +248,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.6.1</version>
+                    <version>3.8.1</version>
                     <executions>
                         <execution>
                             <id>unpack-keycloak-server-dist</id>
@@ -254,7 +261,7 @@
                                     <artifactItem>
                                         <groupId>org.keycloak</groupId>
                                         <artifactId>keycloak-quarkus-dist</artifactId>
-                                        <version>${keycloak.version}</version>
+                                        <version>26.2.4</version>
                                         <type>zip</type>
                                         <overWrite>true</overWrite>
                                         <outputDirectory>${project.build.directory}</outputDirectory>
