--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>io.cloudtrust</groupId>
     <artifactId>cloudtrust-parent</artifactId>
-    <version>4.1.0-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -22,25 +22,27 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <keycloak.version>20.0.5</keycloak.version>
+        <keycloak.version>26.2.4</keycloak.version>
 
-        <java.version>17</java.version>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <jackson-core.version>2.14.2</jackson-core.version>
-        <jackson-databind.version>2.14.2</jackson-databind.version>
+        <jackson-core.version>2.18.2</jackson-core.version>
+        <jackson-databind.version>2.18.2</jackson-databind.version>
         <systemlambda.version>1.2.1</systemlambda.version>
 
-        <junit.version>5.9.2</junit.version>
-        <junit.platform.version>1.9.2</junit.platform.version>
+        <junit.version>5.11.3</junit.version>
+        <junit.platform.version>1.11.3</junit.platform.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <version.pmd.plugin>3.13.0</version.pmd.plugin>
-        <jacoco.version>0.8.11</jacoco.version>
-        <spotbugs.version>4.8.1.0</spotbugs.version>
-        <fb-contrib.version>7.6.0</fb-contrib.version>
-        <findsecbugs.version>1.12.0</findsecbugs.version>
-        <owasp-check.version>8.2.1</owasp-check.version>
+        <version.pmd.plugin>3.14.0</version.pmd.plugin>
+        <jacoco.version>0.8.12</jacoco.version>
+        <spotbugs.version>4.8.6</spotbugs.version>
+        <fb-contrib.version>7.6.8</fb-contrib.version>
+        <findsecbugs.version>1.13.0</findsecbugs.version>
+        <owasp-check.version>11.1.1</owasp-check.version>
     </properties>
 
     <distributionManagement>
@@ -59,7 +61,7 @@
             <dependency>
                 <groupId>io.cloudtrust</groupId>
                 <artifactId>cloudtrust-common</artifactId>
-                <version>4.1.0-SNAPSHOT</version>
+                <version>5.0.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
